openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecifm-sso-bridge
spec:
  selector:
    app: ecifm-sso-bridge
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
