openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ecifm-sso-bridge
  labels:
    app: ecifm-sso-bridge
spec:
  host: main.facilities.inst1.apps.npos2.ecifmdev.net
  path: /tririga
  to:
    kind: Service
    name: ecifm-sso-bridge
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
